--- a/src/Shared/Scss-snippets.scss
+++ b/src/Shared/Scss-snippets.scss
@@ -15,3 +15,8 @@ $color-dark-two: #4062fa;
     letter-spacing: $spacing;
     color: $color;
 }
+
+@mixin CTA($color) {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+        rgba(45, 35, 66, 0.3) 0 7px 13px -3px, $color 0 -3px 0 inset;
+}
