--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,6 @@
 @import "./../../Shared/Scss-snippets.scss";
 .home-component {
-    padding: 0 0 7em;
+    padding: 0 0 6em;
     @include flex-box(normal, normal, column);
     .base {
         margin-bottom: 48px;
@@ -34,41 +34,36 @@
         }
     }
     .welcome-section {
-        background-color: #fff; // #89c4ff; //#e7e6fc; //
-        // z-index: 11;
+        background-color: #fff;
         @include flex-box(center, center, row);
     }
     .about-section {
         background-color: #fff;
         padding-top: 32px;
-        // z-index: 9;
-        /**
-            Shortlisted colours:
-            
-            2. #d5def5;
-            3. #d3d6db; *
-            4. #f5f9ee **
-        */
     }
     .project-section {
         background-color: #fff;
-        // z-index: 7;
     }
     .education-section {
         background-color: #fff;
-        // z-index: 5;
     }
     .contact-section {
         background-color: #fff;
-        // z-index: 3;
     }
     .outro-section {
         background-color: #fff;
-        // z-index: 1;
+    }
+    q {
+        text-align: center;
+        font-style: italic;
+        margin-bottom: 8px;
+        font-family: fangsong;
+        margin-bottom: 8px;
     }
     .thanks {
         text-align: center;
         color: #7d0000;
+        font-size: 8px;
         a {
             color: #0070ff !important;
         }
@@ -93,6 +88,12 @@
         .headings {
             font-size: 28px;
             margin: 0 0 16px;
+        }
+        q {
+            font-size: 13px;
+        }
+        .thanks {
+            font-size: 6px;
         }
     }
 }
