--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -30,6 +30,55 @@
             font-size: 20px;
             color: #0710c3;
         }
+        .rocket {
+            display: inline-block;
+        }
+
+        .animateRocket {
+            animation-duration: 5s;
+            background-color: red;
+            @keyframes animate-rocket {
+                0% {
+                    transform: scale(1) rotate(10deg);
+                }
+                5% {
+                    transform: scale(1.25) rotate(-15deg);
+                }
+                10% {
+                    transform: scale(1.5) rotate(5deg);
+                }
+                15% {
+                    transform: scale(1.75) rotate(-10deg);
+                }
+                20% {
+                    transform: scale(2) rotate(0);
+                }
+                100% {
+                    transform: scale(20) translate3D(100vw, -100vh, 0) rotate(0);
+                }
+            }
+        }
+
+        @keyframes animate-rocket {
+            0% {
+                transform: scale(1) rotate(10deg);
+            }
+            5% {
+                transform: scale(1.25) rotate(-15deg);
+            }
+            10% {
+                transform: scale(1.5) rotate(5deg);
+            }
+            15% {
+                transform: scale(1.75) rotate(-10deg);
+            }
+            20% {
+                transform: scale(2) rotate(0);
+            }
+            100% {
+                transform: scale(20) translate3D(100vw, -100vh, 0) rotate(0);
+            }
+        }
     }
     .text {
         @include flex-box(normal, normal, column);
