--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -23,6 +23,37 @@
             0px 0px 5px -2px rgb(0, 0, 0);
         // column-gap: 32px;
         border-radius: 8px;
+        // 3D Look
+        // color: #ffffff;
+        // padding: 10px 20px;
+        // background: -moz-linear-gradient(
+        //     top,
+        //     #ffcb69 0%,
+        //     #f0a733 50%,
+        //     #f2a324 92%,
+        //     #ffb730
+        // );
+        // background: -webkit-gradient(
+        //     linear,
+        //     left top,
+        //     left bottom,
+        //     from(#ffcb69),
+        //     color-stop(0.5, #f0a733),
+        //     color-stop(0.92, #f2a324),
+        //     to(#ffb730)
+        // );
+        // -moz-border-radius: 6px;
+        // -webkit-border-radius: 6px;
+        // border-radius: 6px;
+        // border: 1px solid #965f06;
+        // -moz-box-shadow: 0px 1px 1px rgba(000, 000, 000, 0.5),
+        //     inset 1px 2px 0px rgba(255, 255, 255, 0.4);
+        // -webkit-box-shadow: 0px 1px 1px rgba(000, 000, 000, 0.5),
+        //     inset 1px 2px 0px rgba(255, 255, 255, 0.4);
+        // box-shadow: 0px 1px 1px rgba(000, 000, 000, 0.5),
+        //     inset 1px 2px 0px rgba(255, 255, 255, 0.4);
+        // text-shadow: 1px 1px 2px rgba(000, 000, 000, 0.7),
+        //     0px 1px 0px rgba(255, 255, 255, 0.4);
         .info-text {
             @include flex-box(center, normal, row);
             padding-right: 24px;
