Draft-1[6]: Skill Animation and Gradient BG Update on Project

--- a/src/components/Experiance/Experiance.scss
+++ b/src/components/Experiance/Experiance.scss
@@ -2,6 +2,7 @@
 .experiance-component {
     .parent-table {
         @include flex-box(normal, normal, column);
+        overflow: hidden;
         row-gap: 24px;
     }
     .experiance {
