--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -18,7 +18,12 @@
 
     .project {
         @include flex-box(normal, normal, row);
-        background-color: #f3fdf9;
+        // background-color: #f3fdf9;
+        background: linear-gradient(
+            90deg,
+            rgba(141, 211, 255, 1) 6%,
+            rgba(182, 255, 226, 1) 100%
+        );
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
             0px 0px 5px -2px rgb(0, 0, 0);
         // column-gap: 32px;
@@ -90,7 +95,13 @@
     .project-info-container:nth-of-type(2n) {
         .project {
             flex-direction: row-reverse;
-            background-color: #f9edf9;
+            // background: #f9edf9;
+            background: linear-gradient(
+                90deg,
+                rgba(255, 219, 255, 1) 32%,
+                rgba(178, 176, 255, 1) 74%
+            );
+
             column-gap: 32px;
             .info-text {
                 padding: 0;
