--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -253,6 +253,23 @@
         visibility: hidden;
     }
 }
+.dark-mode-about {
+    color: #fff;
+    background: transparent;
+    .me {
+        p {
+            color: #24ff00;
+        }
+    }
+    .text {
+        color: #fff;
+    }
+    .profile-image-container {
+        box-shadow: 0px 1px 16px rgb(224 208 208 / 41%),
+            0px 0px 4px 0px rgb(255 255 255);
+        background-color: transparent;
+    }
+}
 
 @media (width <= 1280px) {
     .about-component {
@@ -277,6 +294,19 @@
         .intro-section {
             flex-direction: column;
             row-gap: 32px;
+        }
+    }
+    .dark-mode-about {
+        .profile-cover {
+            // background: linear-gradient(
+            //     109.6deg,
+            //     rgb(43, 1, 91) 13.4%,
+            //     rgb(122, 2, 54) 100.2%
+            // ) !important;
+            background: transparent;
+        }
+        .profile-image-container {
+            top: 6.5em;
         }
     }
 }
@@ -352,6 +382,13 @@
                     }
                 }
             }
+        }
+    }
+    .dark-mode-about {
+        .profile-image-container {
+            height: 250px;
+            width: 250px;
+            top: 5.5em;
         }
     }
 }
