--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -47,7 +47,9 @@
         font-size: 16px;
     }
 }
-
+.dark-mode-contact {
+    color: #fff;
+}
 @media (width <= 640px) {
     .contact-component {
         flex-direction: column;
