--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -32,6 +32,11 @@ footer {
         }
     }
 }
+.dark-mode-footer {
+    // background-color: transparent;
+    background: linear-gradient(230deg, #000142, #010004);
+    box-shadow: 0px 1px 2px rgb(0 0 0 / 80%), 0px 0 4px 0px rgb(255 255 255);
+}
 @media (width <= 640px) {
     footer {
         height: 56px;
