--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -37,14 +37,168 @@ header {
             @include font-style(20px, 500, normal, 1.3px, $color-dark-one);
         }
     }
-}
+    .container {
+        width: 46px;
+        height: 46px;
+        box-sizing: border-box;
+        padding: 12px;
+        background: none;
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        right: 0;
+        outline: none;
+    }
 
+    .sun {
+        width: 50%;
+        height: 50%;
+        position: absolute;
+        pointer-events: none;
+        opacity: 0;
+        transform: scale(0.6) rotate(0deg);
+        transition: transform 0.3s ease-in, opacity 0.2s ease-in 0.1s;
+
+        /*  white transparent for Safari  */
+        // background: radial-gradient(
+        //     circle,
+        //     rgba(0, 0, 0, 0),
+        //     rgba(0, 0, 0, 0) 50%,
+        //     yellow 50%
+        // );
+        background-image: linear-gradient(
+            319deg,
+            #ffcb43 100%,
+            #ff6425 100%,
+            #ff0016 0%
+        );
+    }
+
+    .sun:before {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: radial-gradient(
+            circle,
+            #f26666 30%,
+            rgba(0, 0, 0, 0) 60%,
+            rgba(0, 0, 0, 0) 65%,
+            orange 50%
+        );
+        transform: rotate(45deg);
+    }
+
+    .sun.visible {
+        pointer-events: auto;
+        opacity: 1;
+        transform: scale(1) rotate(180deg);
+        transition: transform 0.3s ease-in, opacity 0.2s ease-in 0.1s;
+    }
+
+    .moon {
+        width: 50%;
+        height: 50%;
+        pointer-events: none;
+        position: absolute;
+        left: 12.5%;
+        top: 18.75%;
+        background-color: rgba(0, 0, 0, 0);
+        border-radius: 50%;
+        box-shadow: 9px 3px 0px 0px #f0f0f0;
+        opacity: 0;
+        transform: scale(0.3) rotate(65deg);
+        transition: transform 0.3s ease-in, opacity 0.2s ease-in 0.1s;
+    }
+
+    .moon.visible {
+        pointer-events: auto;
+        opacity: 1;
+        transform: scale(1) rotate(0deg);
+        transition: transform 0.3s ease-in, opacity 0.2s ease-in 0.1s;
+    }
+
+    .star {
+        position: absolute;
+        top: 25%;
+        left: 5%;
+        display: block;
+        width: 0px;
+        height: 0px;
+        border-right: 7px solid rgba(0, 0, 0, 0);
+        border-bottom: 5px solid #f0f0f0;
+        border-left: 7px solid rgba(0, 0, 0, 0);
+        transform: scale(0.55) rotate(35deg);
+        opacity: 0;
+        transition: all 0.2s ease-in 0.4s;
+    }
+
+    .star:before {
+        border-bottom: 5px solid #f0f0f0;
+        border-left: 3px solid rgba(0, 0, 0, 0);
+        border-right: 3px solid rgba(0, 0, 0, 0);
+        position: absolute;
+        height: 0;
+        width: 0;
+        top: -3px;
+        left: -5px;
+        display: block;
+        content: "";
+        transform: rotate(-35deg);
+    }
+
+    .star:after {
+        position: absolute;
+        display: block;
+        color: red;
+        top: 0px;
+        left: -7px;
+        width: 0px;
+        height: 0px;
+        border-right: 7px solid rgba(0, 0, 0, 0);
+        border-bottom: 5px solid #f0f0f0;
+        border-left: 7px solid rgba(0, 0, 0, 0);
+        transform: rotate(-70deg);
+        content: "";
+    }
+
+    .moon.visible .star {
+        opacity: 0.8;
+    }
+
+    .star.small {
+        transform: scale(0.35) rotate(35deg);
+        position: relative;
+        top: 50%;
+        left: 37.5%;
+        opacity: 0;
+        transition: all 0.2s ease-in 0.45s;
+    }
+
+    .moon.visible .star.small {
+        opacity: 0.7;
+        transform: scale(0.45) rotate(35deg);
+    }
+}
+.darkMode {
+    background: linear-gradient(230deg, #000142, #01012e);
+    color: #fff;
+    .breadcrumb {
+        background: #fff;
+    }
+}
 @media (width <= 640px) {
     header {
         justify-content: flex-end;
         padding: 0;
         .page-navigator {
             display: none;
+        }
+        .container {
+            right: 40px;
         }
         .breadcrumb {
             display: block;
@@ -100,6 +254,17 @@ header {
             p:hover {
                 background-color: #f2e4e4;
             }
+        }
+    }
+    .darkMode-breadcrumb {
+        background: linear-gradient(
+            109.6deg,
+            rgb(43, 1, 91) 13.4%,
+            rgb(122, 2, 54) 100.2%
+        );
+        .close,
+        .options {
+            color: #fff;
         }
     }
 }
