--- a/src/components/Testimonials/Testimonials.scss
+++ b/src/components/Testimonials/Testimonials.scss
@@ -1,12 +1,13 @@
 @import "./../../shared//Scss-snippets.scss";
 
 .testimonials-section {
+    overflow: hidden;
     .info-card {
         max-width: 75%;
         margin: auto;
         @include flex-box(normal, normal, column);
         row-gap: 16px;
-        background-color: #fff;
+        // background-color: #fff;
         padding: 24px;
         border-radius: 8px;
         box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6),
@@ -43,7 +44,7 @@
         }
         .org-img {
             padding: 8px;
-            background: #fff;
+            // background: #fff;
             border-radius: 4px;
             box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6),
                 0px 0px 1px 0px rgb(4, 6, 255);
