Draft-1[11] :Dark Mode bug fix

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -389,6 +389,7 @@
             height: 250px;
             width: 250px;
             top: 5.5em;
+            background-size: auto 19.5em;
         }
     }
 }
